<resources>
    <string name="app_name">MyNewApplication</string>
    <string name="fit_FEFU">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="stud_create">Созданный студентами</string>
    <string name="registration">Зарегистироваться</string>
    <string name="Acc">Уже есть аккаунт?</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="other">Другое</string>
    <string name="login">Логин</string>
    <string name="name">Имя или никнейм</string>
    <string name="pass">Пароль</string>
    <string name="pass_again">Повторите пароль</string>
    <string name="Sex">Пол</string>
    <string name="reg">Регистрация</string>
    <string name="enter">Вход</string>
    <string name="agree">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="arrowback">ArrowBack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_active">bottom_active</string>
    <string name="active">Активность</string>
    <string name="profile">Профиль</string>
    <string name="Letsstart">Нажимай на кнопку ниже и начинаем трекать активность</string>
    <string name="Letsfit">Время потренить</string>
    <string name="TabLayout_description">Вкладки для переключения между фрагментами</string>
    <string name="Start_Button">Старт</string>
    <string name="user_profile">Профиль</string>
    <string name="save">Сохранить</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="exit">Выйти</string>
    <string name="accept">Принять</string>
    <string name="new_pass">Новый пароль</string>
    <string name="old_pass">Старый пароль</string>
    <string name="share_icon">share_icon</string>
    <string name="trash_icon">trash_icon</string>

</resources>