<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"

        android:theme="@style/Text"
        android:text="@string/reg"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"

        android:contentDescription="@string/arrowback"
        android:theme="@style/MaterialComponents.ArrowButton"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="379dp"
            android:layout_height="60dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="379dp"
            android:layout_height="60dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="379dp"
            android:layout_height="60dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="379dp"
            android:layout_height="60dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_again"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"

        android:theme="@style/Text"
        android:text="@string/Sex"

        app:layout_constraintTop_toBottomOf="@+id/constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:theme="@style/Theme.RadioButton"

            android:id="@+id/radioM"
            android:layout_width="379dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="true"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/male" />

        <RadioButton
            android:theme="@style/Theme.RadioButton"

            android:id="@+id/radioF"
            android:layout_width="379dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/female" />

        <RadioButton
            android:theme="@style/Theme.RadioButton"

            android:id="@+id/radioO"
            android:layout_width="379dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/other" />
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="379dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"

        android:stateListAnimator="@null"
        android:text="@string/registration"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGrp"
        app:lineHeight="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:text="@string/agree"
        android:textSize="12sp"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>