<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"

        android:gravity="center"

        android:theme="@style/Text"
        android:text="@string/user_profile" />

    <TextView
        android:id="@+id/save_button"
        style="@style/MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"

        android:gravity="end|center"

        android:clickable="true"
        android:focusable="true"

        android:text="@string/save" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="80dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_change">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/button_change"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"

            android:text="@string/change_pass"
            style="@style/MaterialComponents.Button"

            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_ex"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="bottom"

        style="@style/MaterialComponents.ExitButton"
        android:stateListAnimator="@null"
        android:text="@string/exit"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="24sp" />


</FrameLayout>