<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PasswordChangeFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:layout_marginTop="15dp"

        android:contentDescription="@string/arrowback"
        app:srcCompat="@drawable/arrow_back"
        app:tint="@color/purple_500"
        android:background="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"

        android:gravity="center"

        android:theme="@style/Text"
        android:text="@string/change_pass" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="80dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputNewPass">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_pass" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@+id/textInputOldPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputReentPass">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pass" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputReentPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            app:layout_constraintTop_toBottomOf="@+id/textInputNewPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_ex">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_again" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_ex"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"

            android:stateListAnimator="@null"
            android:text="@string/accept"

            app:layout_constraintTop_toBottomOf="@+id/textInputReentPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lineHeight="24sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>